--- a/CSS/styleStep1.css
+++ b/CSS/styleStep1.css
@@ -1,3 +1,5 @@
+/* ---- THIS CSS FILE ADDS THE STYLING TO THE STEP1.HTML FILE ---- */
+
 * {
   outline: 0;
   margin: 0;
@@ -16,6 +18,7 @@ body {
   height: 100%;
   background-color: black;
 }
+
 a {
   position: absolute;
   top: 1170px;
