--- a/CSS/styleStep1.css
+++ b/CSS/styleStep1.css
@@ -6,23 +6,38 @@
   padding: 0;
   overflow: hidden;
   font:normal 130% Arial, Helvetica, sans-serif;
+ 
 }
 
 html {
   width: 100%;
-  height: 100%;
+  height: 100%; 
+  
 }
 
 body {
   width: 100%;
   height: 100%;
   background-color: black;
+  display: flex;
 }
 
-a {
+ul{
+
   position: absolute;
-  top: 1170px;
-  left: 20px;
+  width: 50%;
+  left: 25%;  
+  
+}
+
+li{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+a{
+  
   text-decoration: none;
   color: grey;
 }
