--- a/CSS/styleStep1.css
+++ b/CSS/styleStep1.css
@@ -5,39 +5,37 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  font:normal 130% Arial, Helvetica, sans-serif;
- 
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html {
+html{
   width: 100%;
-  height: 100%; 
-  
+  height: 100%;
 }
 
 body {
   width: 100%;
   height: 100%;
-  background-color: black;
-  display: flex;
+  background-color: white;
 }
 
 ul{
-
+  display: flex;
   position: absolute;
-  width: 50%;
-  left: 25%;  
-  
-}
-
-li{
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 95vw;
+  left: 2%;
+  top: 2%;
 }
 
 a{
-  
   text-decoration: none;
-  color: grey;
+  color: darkgray;
+  font-size: 3em;
+}
+
+a:hover{
+  opacity: 0.5;
 }
